Финальная версия. Нормально работает только в режиме "звук+вибрация", но это легко исправляется

--- a/app/src/main/res/xml/timer_preferences.xml
+++ b/app/src/main/res/xml/timer_preferences.xml
@@ -26,7 +26,13 @@
         android:defaultValue="fly_away"
         android:entries="@array/pref_timer_melody_labels"
         android:entryValues="@array/pref_timer_melody_values"
+        />
 
+    <EditTextPreference
+
+        android:title="Default Timer Interval"
+        android:key="default_interval"
+        android:defaultValue="30"
         />
 
 </PreferenceScreen>
